k8s/manifests/a2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a2
  labels:
    app: a2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: a2
  template:
    metadata:
      labels:
        app: a2
    spec:
      containers:
        - name: a2
          image: a1.1:latest
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 6379
          resources:
            limits:
              cpu: 40m
              memory: 100Mi
