k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: a2
  name: a2
spec:
  selector:
    app: a2
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
